# fp-template

./: Cargo.toml
cartridge/: Cargo.toml
cartridge/bindings/rust-plugin/: Cargo.toml
cartridge/bindings/rust-plugin/src/: export.rs
cartridge/bindings/rust-wasmer-runtime/: bindings.rs
cartridge/bindings/rust-wasmer-wasi-runtime/: bindings.rs
cartridge/src/: main.rs
cartridge1/: Cargo.toml
cartridge1/src/: lib.rs
cartridge2/: Cargo.toml
cartridge2/.cargo/: config.toml
cartridge2/src/: lib.rs
console/: Cargo.toml
console/src/: main.rs
