[package]
name = "cartridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.20.1"
egui_web = "0.17.0"
# fp-bindgen = { version = "2.4.0", features = ["generators"] }
fp-bindgen = { path = "../../SNES/fp-bindgen/fp-bindgen", features = ["generators"] }
once_cell = "1.16.0"
