[package]
name = "console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
# egui = "0.20.1"
# fp-bindgen-support = { version = "2.4.0", features = ["async", "host"] }
fp-bindgen-support = { path = "../../SNES/fp-bindgen/fp-bindgen-support", features = [
  "async",
  "host",
  #"http",
] }
serde = "1.0.152"
wasmer = { version = "3.1.0", default-features = false, features = [] }
wasmer-compiler-singlepass = "3.1.0"
# wasmer-wasi = "3"
