[package]
name = "cartridge-bindings"
version = "1.0.0"
authors = ["Cavey Cool <caveycool@gmail.com>"]
edition = "2018"

[dependencies]
egui = { version = "0.20.1", features = ["persistence"] }
fp-bindgen-support = { version = "2.4.0", features = ["async", "guest"] }
once_cell = { version = "1" }
rmp-serde = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
